# wezel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.anthill  Dockerfile.burrow  README.md  VISION.md  dist-workspace.toml  docker-compose.yml  justfile  rust-toolchain.toml  schema.json
.github/workflows/: ci.yml  nightly.yml  wezel.yml
.wezel/: .gitignore  config.toml
.wezel/experiments/clean-build/: experiment.toml
.wezel/experiments/incremental-build/: experiment.toml
.wezel/experiments/release-build/: experiment.toml
.wezel/experiments/workspace-bloat/: experiment.toml
anthill/: package-lock.json  package.json  vite.config.ts
anthill/src/: App.tsx  Shell.tsx  index.css
anthill/src/components/: Badge.tsx  BenchmarkCreatorModal.tsx  BuildTimingsChart.tsx  DeltaBadge.tsx  DetailView.tsx  ExperimentCreatorModal.tsx  FilterBar.tsx  FreqBar.tsx  Graph.tsx  HeatLegend.tsx  PanelHandle.tsx  RunList.tsx  Stat.tsx  Summary.tsx  VizRenderer.tsx
anthill/src/lib/: AuthContext.tsx  ProjectContext.tsx  api.ts  colors.ts  data.ts  format.ts  hooks.ts  projectCtx.ts  registry.ts  theme.ts  toolchain.ts
anthill/src/mock_data/: commits.json  users.json
anthill/src/routes/: BisectionDetailPage.tsx  BisectionsPage.tsx  CommitPage.tsx  CommitsListPage.tsx  ComparePage.tsx  LoginPage.tsx  MeasurementDetailPage.tsx  NewProjectPage.tsx  ObservationsPage.tsx  PheromoneAdminPage.tsx  ScenarioDetailPage.tsx  ScenariosPage.tsx  SetupPage.tsx  TimelinePage.tsx
baselines/: clean-build.json  release-build.json
baselines/clean-build/: HEAD
crates/burrow/: Cargo.toml
crates/burrow/src/: auth.rs  db.rs  github.rs  github_app.rs  main.rs  models.rs  regression.rs  scheduler.rs  seed.rs
crates/burrow/src/routes/: bisections.rs  branches.rs  commits.rs  forager.rs  mod.rs  observations.rs  pheromones.rs  projects.rs  repos.rs  setup.rs  tools.rs  webhooks.rs
crates/forager_cargo/: Cargo.toml
crates/forager_cargo/src/: main.rs
crates/forager_cli/: Cargo.toml
crates/forager_cli/src/: daemon.rs  lint.rs  main.rs  run.rs  serve.rs
crates/forager_exec/: Cargo.toml
crates/forager_exec/src/: main.rs
crates/forager_llvm_lines/: Cargo.toml
crates/forager_llvm_lines/src/: main.rs
crates/forager_sdk/src/: lib.rs
crates/forager_sdk/tests/: smoke.rs
crates/pheromone-cli/: Cargo.toml
crates/pheromone-cli/src/: main.rs
crates/pheromone_cargo/: Cargo.toml
crates/pheromone_cargo/src/: main.rs
crates/pheromone_cli/: Cargo.toml
crates/pheromone_cli/src/: main.rs  shell.rs
crates/pheromone_cli/src/cmd/: alias.rs
crates/pheromone_types/: Cargo.toml
crates/pheromone_types/src/: lib.rs
crates/wezel_bench/: Cargo.toml
crates/wezel_bench/src/: daemon.rs  fetch.rs  lib.rs  lint.rs  lockfile.rs  new.rs  run.rs  standalone.rs  workspace.rs
crates/wezel_bench/tests/: bundle.rs  lint.rs  scratch_overlay.rs  snapshot.rs  standalone.rs
crates/wezel_cli/: Cargo.toml
crates/wezel_cli/src/: config.rs  daemon.rs  fetcher.rs  flush.rs  main.rs  pheromone_mgr.rs  progress.rs  queue.rs  runner.rs  shell.rs
crates/wezel_cli/src/cmd/: alias.rs  health.rs  init.rs  mod.rs  setup.rs  status.rs
crates/wezel_types/: Cargo.toml
crates/wezel_types/src/: lib.rs
e2e/hurl/: 01_health.hurl  02_projects.hurl  03_events.hurl  04_forager.hurl
e2e/scripts/: setup.sh  teardown.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Shell.tsx
frontend/src/components/: Badge.tsx  FilterBar.tsx  FreqBar.tsx  Graph.tsx  PanelHandle.tsx  RunList.tsx
frontend/src/lib/: data.ts  format.ts  theme.ts  useKeyboardNav.ts
frontend/src/mock_data/: scenarios.json
frontend/src/mock_data/graphs/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
frontend/src/routes/: CommitPage.tsx  MeasurementDetailPage.tsx  ScenarioDetailPage.tsx  ScenariosPage.tsx
scripts/: build-pheromones.sh  dev.sh  seed.py  seed.sh
