[package]
name = "burrow"
version = "0.1.0"
edition = "2024"
repository.workspace = true

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }