[package]
name = "burrow"
version = "0.1.0"
edition = "2024"
repository.workspace = true
publish.workspace = true

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"