[package]
name = "wezel_cli"
version = "0.1.3"
edition = "2024"
repository.workspace = true
license = "Apache-2.0"
publish.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "wezel"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }

dialoguer = { workspace = true }
env_logger = { workspace = true }
figment = { version = "0.10", features = ["toml"] }
flate2 = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wezel_bench = { path = "../wezel_bench" }
wezel_types = { workspace = true }
whoami = { workspace = true }
